# scriptscribe

./: .gitignore  Caddyfile  Dockerfile  README.md  app.js  app.py  compose.yaml  docker-compose-dev.yaml  docker-compose.yaml  index.html  main.html  main.py  pylintrc.toml  requirements.txt  styles.css  test_pdf.json
.github/workflows/: docker-build.yaml  docker-image.yaml  docker-image.yml  pylint.yml
backend/: Dockerfile  app.py  config.py  pyproject.toml  requirements.txt  tests.py  users.json
backend/modules/auth/: auth.py  routes.py
backend/modules/core/: routes.py
backend/src/routes/: auth.py  core.py
backend/src/utils/: auth.py
frontend/: Caddyfile  Dockerfile  app.js  index.html  main.html  styles.css
frontend/resources/js/: app.js  login.js
frontend/static/: index.html  main.html
frontend/static/js/: app.js  login.js
k8s/: httproute.yaml  ingress.yaml  kustomization.yaml
k8s/backend/: auth-sealed-secret.yaml  auth-secret.yaml  configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
k8s/database/: kustomization.yaml  service.yaml  stateful-set.yaml
k8s/frontend/: deployment.yaml  service.yaml
modules/auth/: routes.py
modules/auth/static/js/: login.js
modules/auth/templates/: login.html
modules/core/: routes.py
modules/core/static/js/: app.js
modules/core/templates/: main.html
resources/css/: styles.css
resources/js/: app.js  login.js
static/css/: styles.css
static/js/: app.js  login.js
templates/: login.html  main.html
tests/: test.json
