[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "fpdf>=1.7.2",
    "gunicorn>=23.0.0",
    "nltk>=3.9.2",
    "pillow>=12.1.0",
    "pyjwt>=2.10.1",
    "pymongo>=4.16.0",
    "pytesseract>=0.3.13",
]
