[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "fpdf>=1.7.2",
    "gunicorn>=25.1.0",
    "nltk>=3.9.2",
    "pillow>=12.1.1",
    "pyjwt>=2.11.0",
    "pymongo>=4.16.0",
    "pytesseract>=0.3.13",
]
