[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "fpdf>=1.7.2",
    "gunicorn>=25.3.0",
    "nltk>=3.9.4",
    "pillow>=12.2.0",
    "pyjwt>=2.12.1",
    "pymongo>=4.17.0",
    "pytesseract>=0.3.13",
]
